cluster/apps/media/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  externalName: nuc0.home
  ports:
    - name: http
      port: 8989
      protocol: TCP
      targetPort: 8989
  sessionAffinity: None
  type: ExternalName
