cluster/apps/media/sonarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    hajimari.io/enable: "true"
    hajimari.io/icon: "cloud-download"
spec:
  tls:
    - secretName: "${SECRET_DOMAIN_INTERNAL/./-}-tls"
      hosts:
        - sonarr.${SECRET_DOMAIN_INTERNAL}
  rules:
    - host: sonarr.${SECRET_DOMAIN_INTERNAL}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
